internal/gatewayapi/testdata/envoyproxy-gateway-accesslog-with-bad-sinks.out.yaml
envoyProxiesForGateways:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    name: test
    namespace: envoy-gateway
  spec:
    logging: {}
    provider:
      kubernetes:
        envoyDeployment:
          container:
            env:
            - name: env_a
              value: env_a_value
            - name: env_b
              value: env_b_name
            image: envoyproxy/envoy:distroless-v1.39.0
            resources:
              requests:
                cpu: 100m
                memory: 512Mi
            securityContext:
              allowPrivilegeEscalation: false
              runAsUser: 2000
          pod:
            affinity:
              nodeAffinity:
                requiredDuringSchedulingIgnoredDuringExecution:
                  nodeSelectorTerms:
                  - matchExpressions:
                    - key: cloud.google.com/gke-nodepool
                      operator: In
                      values:
                      - router-node
            annotations:
              key1: val1
              key2: val2
            securityContext:
              fsGroup: 2000
              fsGroupChangePolicy: OnRootMismatch
              runAsGroup: 3000
              runAsUser: 1000
            tolerations:
            - effect: NoSchedule
              key: node-type
              operator: Exists
              value: router
            volumes:
            - name: certs
              secret:
                secretName: envoy-cert
          replicas: 2
        envoyService:
          type: LoadBalancer
      type: Kubernetes
    telemetry:
      accessLog:
        settings:
        - format:
            text: |
              [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"\n
            type: Text
          sinks:
          - type: File
          - type: ALS
          - type: OpenTelemetry
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: '[unable to configure access log when using File sink type but "file"
          field being empty, unable to configure access log when using OpenTelemetry
          sink type but "openTelemetry" field being empty]'
        reason: InvalidParameters
        status: "False"
        type: Accepted
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    infrastructure:
      parametersRef:
        group: gateway.envoyproxy.io
        kind: EnvoyProxy
        name: test
    listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
  status:
    conditions:
    - lastTransitionTime: null
      message: 'Invalid parametersRef:: [unable to configure access log when using
        File sink type but "file" field being empty, unable to configure access log
        when using OpenTelemetry sink type but "openTelemetry" field being empty]'
      reason: InvalidParameters
      status: "False"
      type: Accepted
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
xdsIR:
  envoy-gateway/gateway-1: {}
